--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -30,7 +30,6 @@
   color: #f9f9f9;
 }
 
-[data-bs-theme='light'] #filePreview,
 [data-bs-theme='dark'] #filePreview {
   border-style: solid;
 }
@@ -1529,13 +1528,15 @@ div.gslide-media.gslide-inline {
 }
 
 @media (max-width: 768px) {
+  [data-bs-theme='light'] #filePreview,
   [data-bs-theme='light'] .picture-placeholder:has(img) {
     border-style: solid;
     border-width: 1px;
     /* border-color: #3c465280; */
   }
 
-  [data-bs-theme='light'] .picture-placeholder {
+  [data-bs-theme='light'] .picture-placeholder
+  {
     border-color: transparent;
   }
 
