--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -56,55 +56,33 @@
 
 /* laptop media queries */
 @media (min-width: 992px) and (max-width: 1250px) {
-  /* #list-example-desktop {
-    left: calc(50% - (var(--left-nav-width) / 2));
-  } */
+  /* this will be small when the left content is open */
+  a.navbar-brand img {
+    min-width: 90px;
+    /* original width */
+    max-width: 200px;
+    width: 100%;
+  }
+
+  #page-wrapper.nav-n-content #themeSwitchDropdown {
+    display: none !important;
+  }
 }
 
 /* left nav bar desktop */
 @media (min-width: 992px) {
-  /* Toggle button styling */
-  .toggle-btn {
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    background: #f0f0f0;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    transition: all 0.2s ease;
-  }
-
-  /* Main toggle button positioning */
-  .main-toggle {
-    position: fixed;
-    top: 1rem;
-    left: 1rem;
-    z-index: 1000;
-  }
-
-  /* this will be small when the left content is open */
-  a.navbar-brand img {
-    width: 100px;
-    /* original width */
-    /* width: 200px; */
-  }
-
-  /* When navbar is checked */
-  #toggle-navbar:checked ~ #page-wrapper {
-    /* grid-template-columns: 1fr auto 0; */
+  #page-wrapper.nav-n-content {
     grid-template-columns: 1fr auto auto;
   }
 
-  #page-wrapper {
-    /* display: flex !important;
-    align-items: start;
-    justify-content: center; */
+  #page-wrapper.nav-only {
+    grid-template-columns: 1fr auto 0;
+  }
 
+  #page-wrapper {
     display: grid !important;
-    /* grid-template-columns: 1fr auto auto; */
-    /* default */
     grid-template-columns: 1fr 0 0;
     height: 100dvh;
-    /* height: 100%; */
     overflow: hidden;
     transition: grid-template-columns 0.3s ease-in-out;
   }
@@ -118,16 +96,60 @@
   }
  */
   .left-sidebar-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     overflow-y: scroll;
     /* position: sticky; */
     /* height: 100dvh; */
     /* top: 0; */
+    max-width: 350px;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
   }
 
+  .left-sidebar-container .price-article,
+  .left-sidebar-container .calendar-article,
+  .left-sidebar-container .inbox-article,
+  .left-sidebar-container .settings-article,
+  .left-sidebar-container .customize-article {
+    grid-area: 1/1;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+  }
+
+  .left-sidebar-container .price-article {
+    z-index: 2;
+  }
+
+  /* #left-nav-bar button[aria-label='customize'].is-active .customize-article,
+  #left-nav-bar button[aria-label='price'].is-active .price-article,
+  #left-nav-bar button[aria-label='calendar'].is-active .calendar-article,
+  #left-nav-bar button[aria-label='inbox'].is-active .inbox-article,
+  #left-nav-bar button[aria-label='settings'].is-active .settings-article {
+    z-index: 3;
+  } */
+
+  /* .left-sidebar-container .customize-article {
+    z-index: 5;
+  }
+  .left-sidebar-container .price-article {
+    z-index: 4;
+  }
+  .left-sidebar-container .calendar-article {
+    z-index: 3;
+  }
+  .left-sidebar-container .inbox-article {
+    z-index: 2;
+  }
+  .left-sidebar-container .settings-article {
+    z-index: 1;
+  } */
+
   .left-sticky-nav {
-    /* display: flex; */
-    position: sticky !important;
-    top: 0;
+    /* position: sticky !important;
+    top: 0; */
     height: 100dvh;
 
     /* for hiding the element
@@ -156,7 +178,7 @@
     gap: 0.5rem;
     list-style: none;
     padding: 0.5rem 0.3rem 0;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     overflow: hidden;
   }
 
@@ -173,9 +195,12 @@
   }
 
   /* --falcon-link-color-rgb: 44, 123, 229; */
-  .left-sticky-nav ul li a {
+  .left-sticky-nav ul li button {
     display: flex;
     color: rgba(var(--falcon-link-color-rgb), 1);
+    background: inherit;
+    border-radius: inherit;
+    border: inherit;
     flex-direction: column;
     list-style: none;
     text-decoration: none;
@@ -184,6 +209,38 @@
     padding: 0.3rem 1rem;
     gap: 0.3rem;
     width: 100%;
+  }
+
+  #toggle-nav-container {
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 45px;
+  }
+
+  /* Toggle button styling */
+  .toggle-btn {
+    width: fit-content;
+    padding: 0.3rem 1rem;
+    background: transparent;
+    /* border: 1px solid #ddd; */
+    border-radius: 4px;
+    /* transition: all 0.2s ease; */
+    max-width: var(--left-nav-width);
+  }
+
+  /* Main toggle button positioning */
+  .main-toggle {
+    position: fixed;
+    bottom: 0.5rem;
+    right: 0.1rem;
+    z-index: 1000;
+  }
+
+  .main-toggle.open-left-nav-n-content,
+  .main-toggle.open-just-left-nav {
+    position: relative;
+    bottom: unset;
+    right: unset;
   }
 }
 
