--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -7,6 +7,7 @@
   /* --falcon-table-color: #333 !important;
   --falcon-table-striped-color: #333 !important; */
   --left-nav-width: 55px;
+  --left-content-width: 350px;
 }
 
 /* Specific Styles for Item Description and Custom Fields */
@@ -47,7 +48,7 @@
 /*-----------------------------------------------
 |   Page Wrapper, left vertical Navbar, and triggers
 -----------------------------------------------*/
-#page-wrapper {
+.page-container {
   grid-template-columns: 1fr;
   /* height: 100%; */
 }
@@ -64,44 +65,42 @@
     width: 100%;
   }
 
-  #page-wrapper.nav-n-content #themeSwitchDropdown {
+  .page-container.nav-n-content #themeSwitchDropdown {
     display: none !important;
+  }
+
+  #list-example-desktop {
+    left: calc(50% - var(--left-content-width) / 2);
   }
 }
 
 /* left nav bar desktop */
 @media (min-width: 992px) {
-  #page-wrapper.nav-n-content {
-    grid-template-columns: 1fr auto auto;
+  /* the hide/show logic */
+  .page-container.nav-only {
+    grid-template-columns: 1fr var(--left-nav-width) 0;
   }
 
-  #page-wrapper.nav-only {
-    grid-template-columns: 1fr auto 0;
+  .page-container.nav-n-content {
+    grid-template-columns: 1fr var(--left-nav-width) var(--left-content-width);
   }
 
-  #page-wrapper {
+  .page-container {
     display: grid !important;
     grid-template-columns: 1fr 0 0;
     height: 100dvh;
     overflow: hidden;
-    transition: grid-template-columns 0.3s ease-in-out;
+    /* transition: grid-template-columns 0.3s ease-in-out; */
   }
 
-  #page-wrapper main {
+  .page-container main {
     overflow-y: auto;
   }
-  /*
-  #list-example-desktop {
-    position: absolute;
-  }
- */
+
   .left-sidebar-container {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     overflow-y: scroll;
-    /* position: sticky; */
-    /* height: 100dvh; */
-    /* top: 0; */
     max-width: 350px;
     max-height: 100%;
     width: 100%;
@@ -144,7 +143,6 @@
     overflow: hidden;
   }
 
-  /* #toggle-navbar ~ .toggle-btn, */
   .left-sticky-nav ul li {
     display: flex;
     flex-direction: column;
@@ -156,8 +154,6 @@
     width: 100%;
     border-radius: 6px;
   }
-
-  /* --falcon-link-color-rgb: 44, 123, 229; */
 
   .left-sticky-nav ul li button,
   .left-sticky-nav ul li label {
@@ -180,7 +176,7 @@
     margin: 0;
   }
 
-  #toggle-navbar ~ label.toggle-btn {
+  .navbar-toggle ~ label.toggle-btn {
     position: fixed;
     bottom: 0.5rem;
     right: 0.25rem;
@@ -189,36 +185,39 @@
     max-width: var(--left-nav-width);
     padding: 0;
     border: transparent;
+    /* border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%; */
     /* highest z-index in this page */
     z-index: 1031;
     padding: 0.6rem 1rem 0.6rem 0.2rem;
-    transition: padding 0.3s ease-in-out;
+    transition: padding 0.25s ease-in-out;
   }
 
-  #toggle-navbar ~ label.toggle-btn:hover {
-    padding-left: 1rem;
+  .navbar-toggle ~ label.toggle-btn:hover {
+    padding-left: 0.5rem;
   }
 
-  #toggle-navbar:checked ~ .toggle-btn {
+  .navbar-toggle:checked ~ .toggle-btn {
     opacity: 0;
     visibility: hidden;
     z-index: -100;
     padding: 0.6rem 1rem 0.6rem 0.2rem;
-    transition: padding 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s ease-in-out,
-      z-index 0.3s ease-in-out;
+    transition-property: padding, opacity, visibility, z-index;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
   }
 
-  #toggle-navbar:checked ~ .toggle-btn svg {
+  .navbar-toggle:checked ~ .toggle-btn svg {
     transform: rotate(180deg);
     transition: transform 0.2s ease-in-out;
   }
 
-  #toggle-navbar ~ .toggle-btn svg {
+  .navbar-toggle ~ .toggle-btn svg {
     transform: rotate(0deg);
     transition: transform 0.2s ease-in-out;
   }
 
-  /* #toggle-navbar ~ #page-wrapper #left-nav-bar #left-nav-trigger {
+  /* .navbar-toggle ~ .page-container #left-nav-bar #left-nav-trigger {
     transform: rotate(0deg);
     transition: transform 0.2s ease-in-out;
   } */
