--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -122,13 +122,13 @@
     z-index: 2;
   }
 
-  .left-sticky-nav {
+  .left-nav-bar {
     height: 100dvh;
     max-width: var(--left-nav-width);
     /* z-index: 1016; */
   }
 
-  .left-sticky-nav ul {
+  .left-nav-bar ul {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -143,7 +143,7 @@
     overflow: hidden;
   }
 
-  .left-sticky-nav ul li {
+  .left-nav-bar ul li {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -155,8 +155,8 @@
     border-radius: 6px;
   }
 
-  .left-sticky-nav ul li button,
-  .left-sticky-nav ul li label {
+  .left-nav-bar ul li button,
+  .left-nav-bar ul li label {
     display: flex;
     color: rgba(var(--falcon-link-color-rgb), 1);
     background: inherit;
@@ -172,7 +172,7 @@
     width: 100%;
   }
 
-  .left-sticky-nav ul li label {
+  .left-nav-bar ul li label {
     margin: 0;
   }
 
